[gd_scene load_steps=10 format=3 uid="uid://crvl47hxfi0b6"]

[ext_resource type="PackedScene" uid="uid://b1r624c4ej3ru" path="res://GenericScenes/TextBox/GenericTextBox.tscn" id="1_0ckii"]
[ext_resource type="Script" uid="uid://cjvjhl17vvny0" path="res://GenericScenes/TextBox/StoryBox.gd" id="2_oofw8"]
[ext_resource type="Theme" uid="uid://c7ov3td0u36sq" path="res://GenericScenes/Themes/GenericTextBox.tres" id="3_yasqk"]
[ext_resource type="Theme" uid="uid://byi38q23oj3ta" path="res://GenericScenes/Themes/ButtonTheme.tres" id="4_bthrx"]
[ext_resource type="AudioStream" uid="uid://dglwomeveiypy" path="res://Tests/587510__mrseriousss__welcome-to-my-website-3-ver.mp3" id="5_bnykj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aybu"]
bg_color = Color(0.191509, 0.106161, 0.0477274, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rf27j"]
bg_color = Color(0.776471, 0.278431, 0.262745, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad1nw"]
bg_color = Color(0.498627, 0.42742, 0.325971, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcl28"]
bg_color = Color(0.204679, 0.505877, 0.366227, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="TextBox" instance=ExtResource("1_0ckii")]
script = ExtResource("2_oofw8")

[node name="TextboxMargin" type="MarginContainer" parent="MarginContainer/BoxDesign" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/BoxDesign/TextboxMargin" index="0"]
layout_mode = 2

[node name="TextboxDesign" type="PanelContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_yasqk")
theme_override_styles/panel = SubResource("StyleBoxFlat_6aybu")

[node name="TextboxContainer" type="VBoxContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/TextboxDesign" index="0"]
layout_mode = 2

[node name="CreeContainer" type="MarginContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/TextboxDesign/TextboxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="Cree" type="RichTextLabel" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/TextboxDesign/TextboxContainer/CreeContainer" index="0"]
layout_mode = 2
theme = ExtResource("3_yasqk")
theme_override_font_sizes/normal_font_size = 30
text = "example cree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnglishContainer" type="MarginContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/TextboxDesign/TextboxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="English" type="RichTextLabel" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/TextboxDesign/TextboxContainer/EnglishContainer" index="0"]
layout_mode = 2
theme_override_colors/default_color = Color(0.913168, 0.71556, 0.590196, 1)
theme_override_font_sizes/normal_font_size = 30
text = "example english"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer" index="1"]
layout_mode = 2

[node name="BackMarginContainer" type="MarginContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer" index="0"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20

[node name="Back" type="Button" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/BackMarginContainer" index="0"]
layout_mode = 2
theme = ExtResource("4_bthrx")
theme_override_styles/normal = SubResource("StyleBoxFlat_rf27j")
text = "LAST"

[node name="ListenAgainMarginContainer" type="MarginContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer" index="1"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20

[node name="ListenAgain" type="Button" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/ListenAgainMarginContainer" index="0"]
layout_mode = 2
theme = ExtResource("4_bthrx")
theme_override_styles/normal = SubResource("StyleBoxFlat_ad1nw")
text = "REPLAY"

[node name="ContinueMarginContainer" type="MarginContainer" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20

[node name="Continue" type="Button" parent="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/ContinueMarginContainer" index="0"]
layout_mode = 2
theme = ExtResource("4_bthrx")
theme_override_styles/normal = SubResource("StyleBoxFlat_tcl28")
text = "NEXT"

[node name="CreeNarration" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource("5_bnykj")

[node name="EnglishNarration" type="AudioStreamPlayer" parent="." index="2"]

[connection signal="pressed" from="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/BackMarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/ListenAgainMarginContainer/ListenAgain" to="." method="_on_listen_again_pressed"]
[connection signal="pressed" from="MarginContainer/BoxDesign/TextboxMargin/VBoxContainer/ButtonsContainer/ContinueMarginContainer/Continue" to="." method="_on_continue_pressed"]
